fix: use properties to get code tables rather than relative path

--- a/example_notebooks/create_data_model.ipynb
+++ b/example_notebooks/create_data_model.ipynb
@@ -25,10 +25,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-06 07:11:04,113 - root - INFO - init basic configure of logging success\n",
+      "2024-06-06 07:44:49,848 - root - INFO - init basic configure of logging success\n",
       "/Users/josidd/Projects/cdm_glamod/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2024-06-06 07:11:07,485 - root - INFO - init basic configure of logging success\n"
+      "2024-06-06 07:44:53,015 - root - INFO - init basic configure of logging success\n"
      ]
     }
    ],
@@ -45,6 +45,11 @@
     "\n",
     "from collections import OrderedDict\n",
     "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "try:\n",
+    "    from importlib.resources import files as get_files\n",
+    "except ImportError:\n",
+    "    from importlib_resources import files as get_files\n",
     "\n",
     "from cdm_reader_mapper import mdf_reader, test_data"
    ]
@@ -111,13 +116,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-06 07:11:07,613 - root - INFO - Attempting to fetch remote file: imma1_701/input/069-701_1845-04-01_subset.imma.md5\n",
-      "2024-06-06 07:11:07,720 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
-      "2024-06-06 07:11:07,722 - root - INFO - EXTRACTING DATA FROM MODEL: imma1\n",
-      "2024-06-06 07:11:07,723 - root - INFO - Getting data string from source...\n",
-      "2024-06-06 07:11:07,821 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE')\n",
-      "2024-06-06 07:11:07,822 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
-      "2024-06-06 07:11:08,004 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
+      "2024-06-06 07:44:53,144 - root - INFO - Attempting to fetch remote file: imma1_701/input/069-701_1845-04-01_subset.imma.md5\n",
+      "2024-06-06 07:44:53,238 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
+      "2024-06-06 07:44:53,240 - root - INFO - EXTRACTING DATA FROM MODEL: imma1\n",
+      "2024-06-06 07:44:53,240 - root - INFO - Getting data string from source...\n",
+      "2024-06-06 07:44:53,338 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE')\n",
+      "2024-06-06 07:44:53,339 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
+      "2024-06-06 07:44:53,513 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
      ]
     }
    ],
@@ -189,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp7nfpsdjp/imma1_d701\n"
+      "/var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp1ecjaait/imma1_d701\n"
      ]
     }
    ],
@@ -428,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "'/var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp7nfpsdjp/imma1_d701/code_tables'"
+       "'/var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp1ecjaait/imma1_d701/code_tables'"
       ]
      },
      "execution_count": 13,
@@ -437,7 +442,7 @@
     }
    ],
    "source": [
-    "code_tables_path = os.path.join(\"..\", \"cdm_reader_mapper\", \"mdf_reader\", \"code_tables\", \"imma1\")\n",
+    "code_tables_path = get_files(\".\".join([mdf_reader.properties._base, \"code_tables\", \"imma1\"]))\n",
     "shutil.copytree(code_tables_path, os.path.join(my_model_path, \"code_tables\"))"
    ]
   },
@@ -457,12 +462,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-06 07:11:08,421 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
-      "2024-06-06 07:11:08,430 - root - INFO - EXTRACTING DATA FROM MODEL: /var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp7nfpsdjp/imma1_d701\n",
-      "2024-06-06 07:11:08,431 - root - INFO - Getting data string from source...\n",
-      "2024-06-06 07:11:08,609 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE'),('c99', 'year'),('c99', 'month'),('c99', 'day')\n",
-      "2024-06-06 07:11:08,609 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
-      "2024-06-06 07:11:09,016 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
+      "2024-06-06 07:44:53,926 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
+      "2024-06-06 07:44:53,935 - root - INFO - EXTRACTING DATA FROM MODEL: /var/folders/vf/pskk3w4j38l8kk7bc9xm07j00000gp/T/tmp1ecjaait/imma1_d701\n",
+      "2024-06-06 07:44:53,936 - root - INFO - Getting data string from source...\n",
+      "2024-06-06 07:44:54,113 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE'),('c99', 'year'),('c99', 'month'),('c99', 'day')\n",
+      "2024-06-06 07:44:54,113 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
+      "2024-06-06 07:44:54,467 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
      ]
     }
    ],
