--- a/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
+++ b/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This has been succesfully converted to Decimal degrees with the right (-) for each hemisphere. \n",
+    "This has been successfully converted to Decimal degrees with the right (-) for each hemisphere. \n",
     "\n",
     "\n",
     "Now for the SLP we have other information:"
