restructure ipython notebooks

--- a/docs/example_notebooks/create_data_model.ipynb
+++ b/docs/example_notebooks/create_data_model.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a data model"
+    "## How to create a data model"
+   ]
+  }, 
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a data model"
    ]
   },
   {
@@ -248,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the custom model\n",
+    "### Create the custom model\n",
     "\n",
     "We now make the adjustments to the schema to parse the sentinal, voyage number, and date fields. The rest can be skipped for this example.\n",
     "\n",
