--- a/docs/example_notebooks/CLIWOC_datamodel.ipynb
+++ b/docs/example_notebooks/CLIWOC_datamodel.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom Schema\n",
+    "### Custom Schema\n",
     "\n",
     "To use a custom schema we need to use the `data_model_path` argument in `mdf_reader.read`. The structure of the directory is:\n",
     "\n",
