docs: update and run example notebooks

--- a/docs/example_notebooks/mdf_reader_test_overview.ipynb
+++ b/docs/example_notebooks/mdf_reader_test_overview.ipynb
@@ -16,8 +16,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-23 10:25:45,712 - root - INFO - init basic configure of logging success\n",
-      "2024-08-23 10:25:47,877 - root - INFO - init basic configure of logging success\n"
+      "2024-10-02 13:31:55,716 - root - INFO - init basic configure of logging success\n",
+      "venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -29,7 +30,8 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from cdm_reader_mapper import mdf_reader, test_data"
+    "from cdm_reader_mapper import mdf_reader\n",
+    "from cdm_reader_mapper.data import test_data"
    ]
   },
   {
@@ -55,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-23 10:25:48,013 - root - INFO - Attempting to fetch remote file: imma1_704/input/125-704_1878-10-01_subset.imma.md5\n"
+      "2024-10-02 13:31:58,700 - root - INFO - Attempting to fetch remote file: icoads/r300/d704/input/icoads_r300_d704_1878-10-01_subset.imma.md5\n"
      ]
     },
     {
@@ -117,7 +119,7 @@
     }
    ],
    "source": [
-    "data_path = test_data.test_125_704[\"source\"]\n",
+    "data_path = test_data.test_icoads_r300_d704[\"source\"]\n",
     "\n",
     "data_ori = pd.read_table(data_path)\n",
     "data_ori.head()"
@@ -147,20 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "['gcc_immt',\n",
-       " 'imma1',\n",
-       " 'imma1_d701',\n",
-       " 'imma1_d702',\n",
-       " 'imma1_d704',\n",
-       " 'imma1_d705-707',\n",
-       " 'imma1_d714',\n",
-       " 'imma1_d721',\n",
-       " 'imma1_d730',\n",
-       " 'imma1_d781',\n",
-       " 'imma1_nodt',\n",
-       " 'td11',\n",
-       " 'td11_d110',\n",
-       " 'c_raid']"
+       "['craid', 'gcc', 'icoads', 'pub47']"
       ]
      },
      "execution_count": 3,
@@ -188,19 +177,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-23 10:25:48,691 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
-      "2024-08-23 10:25:48,695 - root - INFO - EXTRACTING DATA FROM MODEL: imma1_d704\n",
-      "2024-08-23 10:25:48,696 - root - INFO - Getting data string from source...\n",
-      "2024-08-23 10:25:49,195 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE'),('c99_journal', 'vessel_length'),('c99_journal', 'vessel_beam'),('c99_journal', 'hold_depth'),('c99_journal', 'tonnage'),('c99_journal', 'baro_height'),('c99_daily', 'year'),('c99_daily', 'month'),('c99_daily', 'day'),('c99_daily', 'distance'),('c99_daily', 'lat_deg_an'),('c99_daily', 'lat_min_an'),('c99_daily', 'lon_deg_an'),('c99_daily', 'lon_min_an'),('c99_daily', 'lat_deg_on'),('c99_daily', 'lat_min_on'),('c99_daily', 'lon_deg_of'),('c99_daily', 'lon_min_of'),('c99_daily', 'current_speed'),('c99_data4', 'year'),('c99_data4', 'month'),('c99_data4', 'day'),('c99_data4', 'hour'),('c99_data4', 'ship_speed'),('c99_data4', 'compass_correction'),('c99_data4', 'attached_thermometer'),('c99_data4', 'air_temperature'),('c99_data4', 'wet_bulb_temperature'),('c99_data4', 'sea_temperature'),('c99_data4', 'sky_clear'),('c99_data5', 'year'),('c99_data5', 'month'),('c99_data5', 'day'),('c99_data5', 'hour'),('c99_data5', 'ship_speed'),('c99_data5', 'attached_thermometer'),('c99_data5', 'air_temperature'),('c99_data5', 'wet_bulb_temperature'),('c99_data5', 'sea_temperature'),('c99_data5', 'sky_clear'),('c99_data5', 'compass_correction')\n",
-      "2024-08-23 10:25:49,195 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
-      "2024-08-23 10:25:49,915 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
+      "2024-10-02 13:31:58,957 - root - INFO - READING DATA MODEL SCHEMA FILE...\n",
+      "2024-10-02 13:31:58,972 - root - INFO - EXTRACTING DATA FROM MODEL: icoads_r300_d704\n",
+      "2024-10-02 13:31:58,972 - root - INFO - Getting data string from source...\n",
+      "2024-10-02 13:31:59,195 - root - WARNING - Data numeric elements with missing upper or lower threshold: ('c1', 'BSI'),('c1', 'AQZ'),('c1', 'AQA'),('c1', 'UQZ'),('c1', 'UQA'),('c1', 'VQZ'),('c1', 'VQA'),('c1', 'PQZ'),('c1', 'PQA'),('c1', 'DQZ'),('c1', 'DQA'),('c5', 'OS'),('c5', 'OP'),('c5', 'FM'),('c5', 'IMMV'),('c5', 'IX'),('c5', 'W2'),('c5', 'WMI'),('c5', 'SD2'),('c5', 'SP2'),('c5', 'IS'),('c5', 'RS'),('c5', 'IC1'),('c5', 'IC2'),('c5', 'IC3'),('c5', 'IC4'),('c5', 'IC5'),('c5', 'IR'),('c5', 'RRR'),('c5', 'TR'),('c5', 'NU'),('c5', 'QCI'),('c5', 'QI1'),('c5', 'QI2'),('c5', 'QI3'),('c5', 'QI4'),('c5', 'QI5'),('c5', 'QI6'),('c5', 'QI7'),('c5', 'QI8'),('c5', 'QI9'),('c5', 'QI10'),('c5', 'QI11'),('c5', 'QI12'),('c5', 'QI13'),('c5', 'QI14'),('c5', 'QI15'),('c5', 'QI16'),('c5', 'QI17'),('c5', 'QI18'),('c5', 'QI19'),('c5', 'QI20'),('c5', 'QI21'),('c5', 'QI22'),('c5', 'QI23'),('c5', 'QI24'),('c5', 'QI25'),('c5', 'QI26'),('c5', 'QI27'),('c5', 'QI28'),('c5', 'QI29'),('c5', 'RHI'),('c5', 'AWSI'),('c6', 'FBSRC'),('c6', 'MST'),('c7', 'OPM'),('c7', 'LOT'),('c9', 'CCe'),('c9', 'WWe'),('c9', 'Ne'),('c9', 'NHe'),('c9', 'He'),('c9', 'CLe'),('c9', 'CMe'),('c9', 'CHe'),('c9', 'SBI'),('c95', 'DPRO'),('c95', 'DPRP'),('c95', 'UFR'),('c95', 'ASIR'),('c96', 'ASII'),('c97', 'ASIE'),('c99_journal', 'vessel_length'),('c99_journal', 'vessel_beam'),('c99_journal', 'hold_depth'),('c99_journal', 'tonnage'),('c99_journal', 'baro_height'),('c99_daily', 'year'),('c99_daily', 'month'),('c99_daily', 'day'),('c99_daily', 'distance'),('c99_daily', 'lat_deg_an'),('c99_daily', 'lat_min_an'),('c99_daily', 'lon_deg_an'),('c99_daily', 'lon_min_an'),('c99_daily', 'lat_deg_on'),('c99_daily', 'lat_min_on'),('c99_daily', 'lon_deg_of'),('c99_daily', 'lon_min_of'),('c99_daily', 'current_speed'),('c99_data4', 'year'),('c99_data4', 'month'),('c99_data4', 'day'),('c99_data4', 'hour'),('c99_data4', 'ship_speed'),('c99_data4', 'compass_correction'),('c99_data4', 'attached_thermometer'),('c99_data4', 'air_temperature'),('c99_data4', 'wet_bulb_temperature'),('c99_data4', 'sea_temperature'),('c99_data4', 'sky_clear'),('c99_data5', 'year'),('c99_data5', 'month'),('c99_data5', 'day'),('c99_data5', 'hour'),('c99_data5', 'ship_speed'),('c99_data5', 'attached_thermometer'),('c99_data5', 'air_temperature'),('c99_data5', 'wet_bulb_temperature'),('c99_data5', 'sea_temperature'),('c99_data5', 'sky_clear'),('c99_data5', 'compass_correction')\n",
+      "2024-10-02 13:31:59,195 - root - WARNING - Corresponding upper and/or lower bounds set to +/-inf for validation\n",
+      "2024-10-02 13:31:59,506 - root - INFO - CREATING OUTPUT DATA ATTRIBUTES FROM DATA MODEL\n"
      ]
     }
    ],
    "source": [
-    "schema = \"imma1_d704\"\n",
+    "schema = \"icoads_r300_d704\"\n",
     "\n",
-    "data = mdf_reader.read(data_path, data_model=schema)"
+    "data = mdf_reader.read(data_path, imodel=schema)"
    ]
   },
   {
@@ -454,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MP",
+   "display_name": "cdm_fork",
    "language": "python",
-   "name": "marine_processing"
+   "name": "cdm_fork"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
