chore: fix typo in notebook

--- a/docs/example_notebooks/CLIWOC_datamodel.ipynb
+++ b/docs/example_notebooks/CLIWOC_datamodel.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "# Load schema and save to json file\n",
     "schema = mdf_reader.schemas.read_schema(imodel=model_name)\n",
-    "del schema[\"name\"]  # Remove unecessary field from parsed schema\n",
+    "del schema[\"name\"]  # Remove unnecessary field from parsed schema\n",
     "json_object = json.dumps(schema, indent=2)\n",
     "\n",
     "with open(os.path.join(my_model_path, model_name + \".json\"), \"w\") as outfile:\n",
