docs: point to CLIWOC_datamodel notebook for custom model construction

--- a/docs/example_notebooks/mdf_reader_test_overview.ipynb
+++ b/docs/example_notebooks/mdf_reader_test_overview.ipynb
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To learn how to construct a schema or data model for a particular deck/source, visit this other tutorial: [create_data_model.ipynb](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/docs/notebooks/create_data_model.ipynb)"
+    "To learn how to construct a schema or data model for a particular deck/source, visit this other tutorial: [CLIWOC_datamodel.ipynb](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/docs/notebooks/CLIWOC_datamodel.ipynb)"
    ]
   }
  ],
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
