--- a/docs/example_notebooks/read_overview.ipynb
+++ b/docs/example_notebooks/read_overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test and overview of the `mdf_reader` module"
+    "## How to read meteorogical data with `read_mdf` function"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `mdf_reader` is a module from `cdm_reader_mapper` python3, and is a tool designed to read data files compliant with a user specified [data\n",
+    "The `cdm_reader_mapper.read_mdf` function and is a tool designed to read data files compliant with a user specified [data\n",
     "model](https://cds.climate.copernicus.eu/toolbox/doc/how-to/15_how_to_understand_the_common_data_model/15_how_to_understand_the_common_data_model.html).\n",
     "\n",
     "It was developed with the initial idea to read the [IMMA](https://icoads.noaa.gov/e-doc/imma/R3.0-imma1.pdf) data format, but it was further enhanced to account for other meteorological data formats.\n",
@@ -434,8 +434,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To learn how to construct a schema or data model for a particular deck/source, visit this other tutorial: [CLIWOC_datamodel.ipynb](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/docs/notebooks/CLIWOC_datamodel.ipynb)"
+    "To learn how to construct a schema or data model for a particular deck/source, visit this other [tutorial notebook](https://github.com/glamod/cdm_reader_mapper/blob/main/docs/example_notebooks/CLIWOC_datamodel.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
