Notebooks actually seem fine (just removed the unnecessary/wrong tables call) in CDM_mapper_example_deck704.ipynb

--- a/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
+++ b/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdm_tables = data_bundle.map_model().tables"
+    "cdm_tables = data_bundle.map_model()"
    ]
   },
   {
@@ -305,13 +305,6 @@
     "data_obs = cdm_tables[\"observations-slp\"]\n",
     "data_obs.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
