Revert notebook changes

--- a/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
+++ b/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdm_tables = data_bundle.map_model()"
+    "cdm_tables = data_bundle.map_model().tables"
    ]
   },
   {
@@ -305,6 +305,13 @@
     "data_obs = cdm_tables[\"observations-slp\"]\n",
     "data_obs.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
