--- a/docs/example_notebooks/read_overview.ipynb
+++ b/docs/example_notebooks/read_overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to read meteorological data with `read_mdf` function"
+    "## How to read meteorogical data with `read_mdf` function"
    ]
   },
   {
