Revert notebook changes

--- a/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
+++ b/docs/example_notebooks/CDM_mapper_example_deck704.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "source": [
     "The data from the c99 column for this deck is separated in the following sub sections:\n",
-    "- c99_sentinel\n",
+    "- c99_sentinal\n",
     "- c99_journal\n",
     "- c99_voyage\n",
     "- c99_daily\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_raw.c99_sentinel.head()"
+    "data_raw.c99_sentinal.head()"
    ]
   },
   {
