--- a/docs/example_notebooks/CLIWOC_datamodel.ipynb
+++ b/docs/example_notebooks/CLIWOC_datamodel.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now add the contents for section `c99`. There are some standard (\"header\"_ fields we need to supply. The `\"sentinel\"` is the prefix for the attachment, this is printed in the raw supplementary data and identifies the start of the attachment.\n",
+    "We now add the contents for section `c99`. There are some standard (\"header\"_ fields we need to supply. The `\"sentinal\"` is the prefix for the attachment, this is printed in the raw supplementary data and identifies the start of the attachment.\n",
     "\n",
     "We also need to specify the length of the attachment and the layout.\n",
     "\n",
@@ -245,14 +245,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema[\"sections\"][\"c99\"][\"header\"][\"sentinel\"] = \"99 0 \"\n",
+    "schema[\"sections\"][\"c99\"][\"header\"][\"sentinal\"] = \"99 0 \"\n",
     "schema[\"sections\"][\"c99\"][\"header\"][\"disable_read\"] = False\n",
     "schema[\"sections\"][\"c99\"][\"header\"][\"field_layout\"] = \"fixed_width\"\n",
-    "schema[\"sections\"][\"c99\"][\"header\"][\"length\"] = 245 + 5  # sentinel length\n",
+    "schema[\"sections\"][\"c99\"][\"header\"][\"length\"] = 245 + 5  # Sentinal length\n",
     "schema[\"sections\"][\"c99\"][\"elements\"] = OrderedDict(\n",
     "    {\n",
-    "        \"sentinel\": {\n",
-    "            \"description\": \"attachment sentinel\",\n",
+    "        \"sentinal\": {\n",
+    "            \"description\": \"attachment sentinal\",\n",
     "            \"field_length\": 5,\n",
     "            \"column_type\": \"str\",\n",
     "            \"ignore\": True,\n",
