--- a/docs/example_notebooks/read_overview.ipynb
+++ b/docs/example_notebooks/read_overview.ipynb
@@ -97,9 +97,9 @@
     "\n",
     "```\n",
     "\"c99_journal\": {\n",
-    "            \"header\": {\"sentinel\": \"1\", \"field_layout\":\"fixed_width\",\"length\": 117},\n",
+    "            \"header\": {\"sentinal\": \"1\", \"field_layout\":\"fixed_width\",\"length\": 117},\n",
     "            \"elements\": {\n",
-    "              \"sentinel\":{\n",
+    "              \"sentinal\":{\n",
     "                  \"description\": \"Journal header record identifier\",\n",
     "                  \"field_length\": 1,\n",
     "                  \"column_type\": \"str\"\n",
